tests/integration/snapshots/integration__conformance__n_structure_array_with_unclosed_string.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
["asd]
stdout ---

stderr ---
error: expected closing quote
 --> stdin:1:6
  |
1 | ["asd]
  |  -   ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["asd]"
  |       +
