tests/integration/snapshots/integration__conformance__n_structure_array_with_unclosed_string.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["asd]
stdout --- 
<empty>
stderr --- 
error: expected closing quote
 --> stdin:1:6
  |
1 | ["asd]
  |  -   ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["asd]"
  |       +
