tests/integration/snapshots/integration__conformance__n_structure_capitalized_true.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[True]
stdout ---

stderr ---
error: unexpected character `T`. expected start of a json value
 --> stdin:1:2
  |
1 | [True]
  |  ^
